[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Menu/Credits.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="Credits" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0, 0.203922, 1 )

[node name="GitHub" type="LinkButton" parent="."]
margin_left = 320.0
margin_top = 24.0
margin_right = 616.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "GitHub"

[node name="Camellia" type="LinkButton" parent="."]
margin_left = 480.0
margin_top = 160.0
margin_right = 688.0
margin_bottom = 218.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "Camellia"

[node name="Blink-fox" type="LinkButton" parent="."]
margin_left = 480.0
margin_top = 280.0
margin_right = 696.0
margin_bottom = 338.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "blink-fox"

[node name="Menu" type="Button" parent="."]
margin_left = 288.0
margin_top = 416.0
margin_right = 664.0
margin_bottom = 483.0
custom_fonts/font = SubResource( 1 )
text = "Back to menu"

[node name="Gameochka" type="RichTextLabel" parent="."]
margin_left = 728.0
margin_top = 472.0
margin_right = 960.0
margin_bottom = 536.0
custom_fonts/normal_font = SubResource( 4 )
text = "Igrochka"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 88.0
margin_top = 160.0
margin_right = 472.0
margin_bottom = 344.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[right]Programming:
Art:
Music:"
text = "Programming:
Art:
Music:"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 688.0
margin_top = 160.0
margin_right = 824.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( -48, 48 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_text = ", och"
text = ", och"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 480.0
margin_top = 218.0
margin_right = 616.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( -48, 48 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_text = "och"
text = "och"

[connection signal="pressed" from="GitHub" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Camellia" to="." method="_on_Camellia_pressed"]
[connection signal="pressed" from="Blink-fox" to="." method="_on_Blinkfox_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
